Revision history for exact::class

{{$NEXT}}

1.18      2023-08-22 08:17:07-07:00 America/Los_Angeles
        - Reorder package injection to ensure mods in <=36

1.17      2023-08-21 18:36:06-07:00 America/Los_Angeles
        - Support for exact v1.21

1.16      2022-03-19 17:34:59-07:00 America/Los_Angeles
        - Minor documentation update

1.15      2021-03-30 19:57:04-07:00 America/Los_Angeles
        - Re-allow role composition to override role-provided methods

1.14      2021-03-30 18:44:34-07:00 America/Los_Angeles
        - Role chain attrs are set-able and don't bleed
        - Role chain class attrs are set-able and do bleed

1.13      2021-03-11 08:58:31-08:00 America/Los_Angeles
        - Role class_has attributes don't cross-contaminate beyond the class

1.12      2021-02-04 14:44:44-08:00 America/Los_Angeles
        - Pre-support for exact v1.15 try implementation switch

1.11      2021-01-13 11:13:36-08:00 America/Los_Angeles
        - Override some minimum version reqs in dist.ini

1.10      2021-01-10 15:48:59-08:00 America/Los_Angeles
        - Migrate to Test2::V0
        - Improve .gitignore file
        - License migrate to Artistic 2.0
        - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
        - Update copyright year

1.09      2020-07-30 09:35:28-07:00 America/Los_Angeles
        - Inject Class::Method::Modifiers when using class

1.08      2020-04-23 07:44:57-07:00 America/Los_Angeles
        - Allow code ref refs as a means of using callback attributes repeately

1.07      2019-11-06 11:50:09-08:00 America/Los_Angeles
        - Sub attrs in objs lazily-run to set value on first access

1.06      2019-11-05 11:17:22-08:00 America/Los_Angeles
        - Fix for new() inputs not overriding class-set attributes in all contexts

1.05      2019-10-18 14:09:01-07:00 America/Los_Angeles
        - Major refactor to more closely match Mojo::Base internal practices