@@ -1,6 +1,8 @@
 Revision history for exact::class
 
 {{$NEXT}}
+        - New import signature change required by exact v1.23
+        - Use Import::Into instead of eval to inject code
 
 1.18      2023-08-22 08:17:07-07:00 America/Los_Angeles
         - Reorder package injection to ensure mods in <=36
